# g-csv

./: .gitignore  LICENSE  README.rst  gcsv.py  pyproject.toml  setup.py
gcsv/: gcsv.py
